--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -14,7 +14,8 @@
     "http": "^0.0.1-security",
     "mariadb": "^3.0.0",
     "mybatis-mapper": "^0.6.8",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "swagger-jsdoc": "^6.2.1",
