--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -19,25 +19,19 @@
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "mariadb": "^3.0.0",
     "mybatis-mapper": "^0.6.8",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "passport": "^0.5.3",
-    "passport-google-oauth2": "^0.2.0",
-    "passport-local": "^1.0.0",
-    "session-file-store": "^1.5.0",
     "node-fecth": "^0.0.1-security",
     "node-fetch": "^3.2.9",
-    "passport": "^0.6.0",
+    "passport": "^0.5.3",
+    "passport-google-oauth2": "^0.2.0",
     "passport-kakao": "^1.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
