--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/art": "^1.2.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
@@ -18,9 +19,13 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-pie": "^1.1.2",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7",
+    "save": "^2.5.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
