BE-park: API 추가 및 보완, SQL Query문 변경, SQL 암호변경

--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -4,5 +4,5 @@ GOOGLE_URL = /auth/google/callback
 DB_HOST = localhost
 DB_USER = salus
 DB_DATABASE = salus
-DB_PASSWORD = b110iot
+DB_PASSWORD = b110IOT~
 TEST = TEST
