--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -18,11 +18,12 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-reanimated": "~2.8.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-progress": "^5.0.0",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-progress": "^5.0.0",
+    "react-native-svg": "12.3.0",
     "react-native-text-gradient": "^0.1.7",
     "react-native-web": "0.17.7",
     "styled-components": "^5.3.5"
