--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "lottie-ios": "^3.4.0",
+    "lottie-react-native": "^5.0.1",
     "moment": "^2.29.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -26,6 +28,7 @@
     "react-native-svg": "12.3.0",
     "react-native-text-gradient": "^0.1.7",
     "react-native-web": "0.17.7",
+    "socket.io-client": "^2.5.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
