--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
+    "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
     "moment": "^2.29.4",
     "react": "17.0.2",
