--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-cli": "^6.0.2",
     "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
     "lottie-ios": "^3.4.0",
@@ -28,7 +29,9 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-socket-io-wrapper": "^0.6.2",
     "react-native-svg": "12.3.0",
+    "react-native-tcp-socket": "^5.6.2",
     "react-native-text-gradient": "^0.1.7",
     "react-native-web": "0.17.7",
     "socket.io-client": "^2.5.0",
