--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
@@ -25,7 +26,7 @@
     "node-fecth": "^0.0.1-security",
     "node-fetch": "^3.2.9",
     "session-file-store": "^1.5.0",
-    "socket.io": "^2.5.0"
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
