--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mobile",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "./node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,10 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.8",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/stack": "^6.2.2",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-cli": "^6.0.2",
+    "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
+    "lottie-ios": "^3.4.0",
+    "lottie-react-native": "^5.0.1",
     "moment": "^2.29.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -24,8 +31,10 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
+    "react-native-tcp-socket": "^5.6.2",
     "react-native-text-gradient": "^0.1.7",
     "react-native-web": "0.17.7",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
