--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -17,7 +17,6 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-cli": "^6.0.2",
-    "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "^5.0.1",
@@ -36,7 +35,8 @@
     "react-native-web": "0.17.7",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
-    "expo-notifications": "~0.15.4"
+    "expo-notifications": "~0.15.4",
+    "expo-linear-gradient": "~11.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
